# build_skel_cmake_cmocka

./: AUTHORS  CMakeLists.txt  DefineOptions.cmake  README.md  README.txt  clean_build.sh
cmake/Modules/: AddCMockaTest.cmake  MacroEnsureOutOfSourceBuild.cmake
doc/: CMakeLists.txt
src/: CMakeLists.txt  main.c  todo.c  todo.h
tests/: CMakeLists.txt  test_todo.c
