ENABLE_TESTING()

FIND_PACKAGE(CMocka REQUIRED)

INCLUDE(AddCMockaTest)

INCLUDE_DIRECTORIES(
    ${CMOCKA_INCLUDE_DIR}
    ${CMAKE_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/src
)


SET(TODO_STATIC_LIBRARY
    todo_static
    CACHE INTERNAL "todo static libray"
)

SET(TODO_SRCS
    ${CMAKE_SOURCE_DIR}/src/todo.c
)

ADD_LIBRARY(${TODO_STATIC_LIBRARY} STATIC ${TODO_SRCS})

TARGET_LINK_LIBRARIES(
    ${TODO_STATIC_LIBRARY}
    ${CMOCKA_LIBRARY}
)


SET(CMOCKA_TESTS
    test_todo
)

foreach(_CMOCKA_TEST ${CMOCKA_TESTS})
    add_cmocka_test(${_CMOCKA_TEST} ${_CMOCKA_TEST}.c ${TODO_STATIC_LIBRARY})
endforeach()

#TARGET_LINK_LIBRARIES(
#    ${TODO_STATIC_LIBRARY}
#    ${CMOCKA_LIBRARY}
#)
